@@ -15,6 +15,7 @@
 - Allow the use of enc_id == 0 in hash-mode 10600 and 10700 as it takes no part in the actual computation
 - Get rid of exit() calls in OpenCL wrapper library with the goal to have a better control which error can be ignored under special circumstances
 - Do not error and exit if an OpenCL platform has no devices, just print a warning and continue with the next platform
+- Workaround OpenCL runtimes that do not accept -I parameter in the OpenCL kernel build options even if this is an OpenCL standard option
 
 ##
 ## Bugs
